--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8" />
@@ -10,6 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/script.js" defer></script>
   <script>
@@ -37,40 +38,20 @@
 
     <div class="flex items-center justify-center space-x-4 md:space-x-10 md:absolute top-12 right-10">
 
-      <a href="#feature" class="hover:text-accentCyan">Features</a>
-      <a href="#feature" class="hover:text-accentCyan">Testimonials</a>
+      <a href="#features" class="hover:text-accentCyan">Features</a>
+      <a href="#productive" class="hover:text-accentCyan">Productive</a>
+      <a href="#testimonials" class="hover:text-accentCyan">Testimonials</a>
 
       <!-- Dark/Light mode Button -->
       <button
           id="theme-toggle"
-          class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2 5"
+          class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-0 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2"
         >
           <!-- Dark SVG Icon -->
-          <svg
-            id="theme-toggle-dark-icon"
-            class="w-5 h-5 hidden"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
-            ></path>
-          </svg>
+          <i id="theme-toggle-dark-icon" 
+          class="fa-solid fa-moon w-5 h-5 hidden"></i>
           <!-- Light SVG Icon -->
-          <svg
-            id="theme-toggle-light-icon"
-            class="w-5 h-5 hidden"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
+          <i id="theme-toggle-light-icon" class="fa-solid fa-sun w-5 h-5 hidden"></i>
         </button>
     </div>
   </header>
@@ -91,6 +72,260 @@
       </button>
     </div>
   </section>
-</body>
 
+  <!-- Feature Section -->
+  <section id="features" class="pt-12 bg-gray-50 dark:bg-darkBlue1">
+    <!-- Features Container -->
+    <div class="container mx-auto px-6 pb-32">
+      <!-- First Row -->
+      <div class="flex flex-col space-y-24 text-center md:flex-row md:space-y-0">
+        <!-- Item 1 -->
+        <div class="flex flex-col items-center space-y-2 md:w-1/2">
+          <div class="flex items-center justify-center h-24 mb-6">
+            <img src="images/icon-access-anywhere.svg" alt="">
+          </div>
+          <h3 class="text-xl font-bold">
+            Access your file from anywhere
+          </h3>
+          <p class="max-w-md">
+            The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.
+          </p>
+        </div>
+
+        <!-- Item 2 -->
+        <div class="flex flex-col items-center space-y-2 md:w-1/2">
+          <div class="flex items-center justify-center h-24 mb-6">
+            <img src="images/icon-security.svg" alt="">
+          </div>
+          <h3 class="text-xl font-bold">
+            Security you can trust
+          </h3>
+          <p class="max-w-md">
+            2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.
+          </p>
+        </div>
+      </div>
+
+      <!-- second Row -->
+      <div class="flex flex-col space-y-24 mt-28 text-center md:flex-row md:space-y-0">
+        <!-- Item 3 -->
+        <div class="flex flex-col items-center space-y-2 md:w-1/2">
+          <div class="flex items-center justify-center h-24 mb-6">
+            <img src="images/icon-collaboration.svg" alt="">
+          </div>
+          <h3 class="text-xl font-bold">
+            Access your file from anywhere
+          </h3>
+          <p class="max-w-md">
+            The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.
+          </p>
+        </div>
+
+        <!-- Item 4 -->
+        <div class="flex flex-col items-center space-y-2 md:w-1/2">
+          <div class="flex items-center justify-center h-24 mb-6">
+            <img src="images/icon-any-file.svg" alt="">
+          </div>
+          <h3 class="text-xl font-bold">
+            Security you can trust
+          </h3>
+          <p class="max-w-md">
+            2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Productive Section -->
+  <section id="productive" class="bg-white dark:bg-darkBlue">
+    <!-- Productive container -->
+    <div class="container flex flex-col items-center mx-auto px-6 pt-24 pb-32 md:flex-row md:space-x-16">
+      <!-- Image -->
+      <div class="md:w-1/2">
+        <img src="images/illustration-stay-productive.png" alt="" class="mb-10">
+      </div>
+
+      <!-- Content -->
+      <div class="clex flex-col items-start md:w-1/2">
+        <div class="flex flex-col space-y-5">
+          <h4 class="max-w-md text-xl font-bold md:text-4xl">
+            Stay productive, wherever yor are
+          </h4>
+          <p class="text-md md:text-lg">
+            Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.
+          </p>
+          <p class="text-md md:text-lg">
+            Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.
+          </p>
+        </div>
+        <!-- Link -->
+        <div class="block mt-4">
+          <a href="#" class="border-b border-accentCyan text-accentCyan">
+            See how Floy works
+            <i class="fa-regular fa-circle-right fa-sm text-accentCyan"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonials section -->
+  <section id="testimonials" class="bg-gray-50 dark:bg-darkBlue">
+    <!-- Testimonials container -->
+    <div class="container mx-auto px-6 pt-12 pb-80 md:pb-96">
+      <!-- Boxes Container -->
+      <div class="relative flex flex-col w-full space-y-6 md:flex-row md:space-y-0 md:space-x-12">
+        <!-- Quote Icon -->
+        <i class="fa-solid fa-quote-left fa-2xl text-8xl absolute left-4 -top-14 w-10 md:left-10 md:-top-20 md:w-20 text-accentCyan"></i>
+        <!-- <img src="images/bg-quotes.png" alt="" class="absolute left-1 -top-2 w-10 md:top-16 md:w-20"> -->
+        <!-- Box 1 -->
+        <div class="flex flex-col p-10 space-y-6 rounded-lg bg-gray-100 dark:bg-darkBlue3 md:w-1/3">
+          <p class="text-sm leading-5 md:text-lg">
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+          </p>
+          <!-- customer Info -->
+          <div class="flex space-x-4">
+            <img src="images/nischal.jpg" alt="" class="w-10 h-10 rounded-full">
+
+            <div>
+              <h5 class="text-sm font-semibold">
+                Nischal Tamang
+              </h5>
+              <p class="text-xs font-extralight">
+                Founder & CEO. Huddle 
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Box 2 -->
+        <div class="flex flex-col p-10 space-y-6 rounded-lg bg-gray-100 dark:bg-darkBlue3 md:w-1/3">
+          <p class="text-sm leading-5 md:text-lg">
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+          </p>
+          <!-- customer Info -->
+          <div class="flex space-x-4">
+            <img src="images/profile-2.jpg" alt="" class="w-10 h-10 rounded-full">
+
+            <div>
+              <h5 class="text-sm font-semibold">
+                Nischal Tamang
+              </h5>
+              <p class="text-xs font-extralight">
+                Founder & CEO. Huddle 2
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Box 3 -->
+        <div class="flex flex-col p-10 space-y-6 rounded-lg bg-gray-100 dark:bg-darkBlue3 md:w-1/3">
+          <p class="text-sm leading-5 md:text-lg">
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+          </p>
+          <!-- customer Info -->
+          <div class="flex space-x-4">
+            <img src="images/profile-3.jpg" alt="" class="w-10 h-10 rounded-full">
+
+            <div>
+              <h5 class="text-sm font-semibold">
+                John Doe
+              </h5>
+              <p class="text-xs font-extralight">
+                Founder & CEO. Huddle 3
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Early Access Section -->
+  <section id="early-access" class="relative px-6 dark:bg-darkBlue2 md:px-0">
+    <div class="relative -top-40 max-w-4xl mx-auto p-10 px6 space-y-6 text-center rounded-lg bg-gray-200 dark:bg-darkBlue1 md:px-16">
+      <h5 class="text-2xl font-bold">
+        Get early access today
+      </h5>
+      <p class="text-sm">
+        It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.
+      </p>
+      <!-- Input & Button COntainer -->
+      <div class="flex flex-col items-start space-y-6 md:flex-row md:space-y-0 md:space-x-6">
+        <div class="w-full md:flex-1">
+          <input 
+          type="text"
+          class="w-full px-10 py-3 rounded-full focus:outline-none"
+          placeholder="email@example.com">
+        </div>
+        <button class="w-full p-3 px-6 rounded-full bg-accentCyan md:w-56 hover:scale-95">
+          Get Started For Free
+        </button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-darkBlue2 text-white">
+    <div class="container mx-auto pt-12 px-5 pb-10">
+      <!-- Flex Container -->
+      <div class="flex flex-col justify-between space-y-24 md:flex-row md:space-y-0">
+        <!-- Email & Phone -->
+        <div class="mx-auto mt-10 space-y-6 text-sm md:text-base md:mx-0">
+          <div class="flex items-center space-x-3 md:-mt-10">
+            <div class="w-5">
+              <i class="fa-solid fa-phone-volume scale-10"></i>
+            </div>
+            <div>+977-9800000000</div>
+          </div>
+
+          <div class="flex items-center space-x-3">
+            <div class="w-5">
+              <i class="fa-solid fa-envelope scale-10"></i>
+            </div>
+            <div>example@fylo.com.com</div>
+          </div>
+        </div>
+
+        <!-- Menus -->
+        <div class="flex  justify-evenly text-sm md:text-base md:space-x-20 md:space-y-0 ">
+          <div class="flex flex-col space-y-3">
+            <a href="#">About</a>
+            <a href="#">Jobs</a>
+            <a href="#">Press</a>
+            <a href="#">Blog</a>
+          </div>
+
+          <div class="flex flex-col space-y-3">
+            <a href="#">Contact us</a>
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+          </div>
+        </div>
+
+        <!-- Social -->
+        <div class="flex justify-center pb-10 space-x-3">
+          <div>
+            <a href="#">
+              <img src="images/facebook.svg" alt="" class="p-2 bg-darkBlue rounded-full ficon">
+            </a>
+          </div>
+
+          <div>
+            <a href="#">
+              <img src="images/twitter.svg" alt="" class="p-2 bg-darkBlue rounded-full ficon">
+            </a>
+          </div>
+
+          <div>
+            <a href="#">
+              <img src="images/instagram.svg" alt="" class="p-2 bg-darkBlue rounded-full ficon">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
 </html>
